# Exodus

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile
docs/: high-ir-design.md
include/: CMakeLists.txt  type.hpp
include/helper/: ir_printer_base.hpp  log.hpp  overload.hpp
include/high/: ast.hpp  ast_base.hpp  ir.hpp  ir_builder.hpp  ir_printer.hpp  sym_tab.hpp
include/mid/: flatten.hpp  ir.hpp  ir_printer.hpp
scripts/: run_functional_runtime_check.sh
src/: CMakeLists.txt  main.cpp
src/FE/: sysy.lx  sysy.y
tests/: CMakeLists.txt  ir_builder_test.cpp  ir_printer_smoke.cpp
